@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Support of kFreeBSD
 
 
 Version 0.7.6 (2014/06/11)
